# save_sync

./: .gitignore  Cargo.toml  README.md
crates/server_test_client/: Cargo.toml
crates/server_test_client/src/: client.rs  lib.rs
crates/server_test_client/src/dto/: api_error.rs  mod.rs  save.rs  save_id.rs  save_metadata.rs
crates/server_test_client/src/response/: http_response_details.rs  mod.rs  response_value_extractor.rs  response_wrapper.rs
crates/server_test_client/src/response/models/: error_response.rs  get_save_response.rs  latest_version.rs  mod.rs  new_save_response.rs  save_metadata_response.rs
crates/server_test_client/src/response/response_value_extractor/: api_error_value_extractor.rs  mod.rs  save_id_value_extractor.rs  save_metadata_value_extractor.rs  save_value_extractor.rs  save_version_value_extractor.rs
sync_server/: Cargo.toml
sync_server/src/: lib.rs  main.rs
sync_server/src/application/: mod.rs
sync_server/src/domain/: error.rs  game_name.rs  mod.rs  save.rs  save_data.rs  save_file_name.rs  save_id.rs  save_repository.rs  save_service.rs  save_version.rs
sync_server/src/ports/: mod.rs
sync_server/src/ports/http/axum/: error.rs  error_handling.rs  mod.rs  server.rs
sync_server/src/ports/persistence/: mod.rs
sync_server/src/ports/persistence/kv/: kv_save.rs  (+2 more)
sync_server/tests/api/: check_latest_version.rs  gets_saves.rs  main.rs  stores_new_saves.rs
sync_server/tests/api/admin/: mod.rs  reports_ok_server_status.rs
sync_server/tests/api/helpers/: default_values.rs  file_contents.rs  mod.rs  new_save.rs  test_context.rs  test_directory_manager.rs
(+13 files in other folders)
