[package]
name = "sync_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
http = "0.2"
spectral = "0.6"
server_test_client = { path = "../crates/server_test_client" }