[package]
name = "sync_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
axum = { version = "0.2", features = ["multipart"] }
derive-new = "0.5"
kv = { version = "0.22", features = ["json-value"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
assert_fs = "1.0"
http = "0.2"
spectral = "0.6"
server_test_client = { path = "../crates/server_test_client" }